--- a/style.css
+++ b/style.css
@@ -651,7 +651,7 @@ body {
         /* display: block; */
         margin: 0 auto 3rem auto;
         border-radius: 20px;
-        height: 100vh;
+        height: auto;
     }
     .seccion3-titulo {
         font-size: 5rem;
@@ -678,7 +678,7 @@ body {
         /* display: block; */
         width: 60%;
         margin: 5rem auto;
-        height: 40px;
+        /* height: 40px; */
         /* padding: 10px; */
         text-decoration: none;
         font-size: 2rem;
@@ -693,7 +693,7 @@ body {
         color: white;
     }
     .form__caja {
-        color: rgba(128, 128, 128, 0.384);
+        color: rgba(204, 203, 203, 0.384);
         width: 95%;
         display: block;
         background-color: transparent;
@@ -701,7 +701,7 @@ body {
         margin: 2rem auto;
         border: 1px solid white;
         text-align: left;
-        padding: 1rem 0;
+        padding: 1rem 2rem;
     }
     .form__caja::placeholder {
         color: rgba(128, 128, 128, 0.384);
